[package]
name = "grow-a-forest"
version = "0.1.0"
authors = ["Unoqwy <julien.qwy@gmail.com>"]
edition = "2018"

[dependencies]
# Procedural macros
gaf_macros = { version = "0.1.1", path = "../grow-a-forest-macros" }

dotenv = "0.15.0"
regex = "1.3.9"

lazy_static = "1.4.0"
tokio = { version = "0.2", features = ["macros"] }
futures = "0.3.5"
serenity = { version = "0.9.0-rc.1", features = ["collector"] }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["runtime-tokio", "macros", "postgres", "time"] }
